5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1596_842.log
== TEST (2019-03-26 19:00:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
print(primeiro_digito)

soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_dig
NameError: name 'seg_dig' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:00:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
print(primeiro_digito)

soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.142587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 9, in <module>
    soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_dig
NameError: name 'seg_dig' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:00:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
print(primeiro_digito)

soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_dig
NameError: name 'seg_dig' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:03:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
print(primeiro_digito)

soma_dos_digitos = (primeiro_digito + seg_dig + ter_dig + q_dig)
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma_dos_digitos = (primeiro_digito + seg_dig + ter_dig + q_dig)
NameError: name 'seg_dig' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:31:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
nro = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_di
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:32:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
nro = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_di
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:32:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
nro = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_di
print(soma_dos_digitos)
-- EXECUTION TIME:
0.146539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:32:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
nro = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_di
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:32:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
nro = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

]
soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_di
print(soma_dos_digitos)
-- ERROR:
File "XXXX", line 14
    ]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:33:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
nro = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_di
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:33:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
nro = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_di
print(soma_dos_digitos)
-- EXECUTION TIME:
0.170506
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:33:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
nro = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_di
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:33:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
nro = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_di
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:34:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_di
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:35:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

entrada = int(input("numero de quatro digitos:"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_di
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:36:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

entrada = int(input("numero de quatro digitos:"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:36:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

entrada = int(input("numero de quatro digitos:"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.135349
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:36:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

entrada = int(input("numero de quatro digitos:"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.206407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 8, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:15:13) 
-- CODE:
entrada = int(input("numero de quatro digitos:"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:16:16) 
-- CODE:
entrada = int(input("numero de quatro digitos:"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito //100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito //100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:16:18) 
-- CODE:
entrada = int(input("numero de quatro digitos:"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito //100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.115127
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito //100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:16:21) 
-- CODE:
entrada = int(input("numero de quatro digitos:"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito //100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito //100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:16:40) 
-- CODE:
entrada = int(input("numero de quatro digitos:"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito//100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito//100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:17:00) 
-- CODE:
entrada = int(input("numero de quatro digitos:"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:17:21) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:17:29) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:17:30) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10


soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.154577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:17:55) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:17:56) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.129323
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:17:57) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:19:40) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarpridigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:20:53) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:20:54) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.123289
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:20:55) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:20:55) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.176258
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:20:56) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.200338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:20:56) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.129241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:20:56) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.119179
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:20:56) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:41:41) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:43:14) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarpridigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:43:20) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarpridigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.150319
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:43:21) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarpridigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:43:21) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarpridigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.161447
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:43:22) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarpridigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.104266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:43:22) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarpridigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:43:23) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarpridigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.128567
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:43:59) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = (pri_dig + seg_dig + ter_dig + quar_dig)
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:27:00) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = "pri_dig + seg_dig + ter_dig + quar_dig"
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:27:02) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = "pri_dig + seg_dig + ter_dig + quar_dig"
print(soma_dos_digitos)
-- EXECUTION TIME:
0.216199
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:26) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.18045
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:29) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.175508
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:29) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.160003
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:30) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.213773
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:30) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.221905
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:30) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.175475
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1596/842/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:30) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.0882778
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1596/842/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:31) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.200906
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:31) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.192417
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:31) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.155667
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:32) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pergarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10
quar_dig = pergarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.115061
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    seg_dig = pergarsegdigito // 100
NameError: name 'pergarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:33:15) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.145327
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
